lab2-deploy-app-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  selector:
    app: sample-app
  ports:
  - name: http
    port: 80
    targetPort: 9876
    protocol: TCP
  type: ClusterIP
