lab2-deploy-app-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nextjs-sample
  labels:
    app: nextjs-sample
spec:
  to:
    kind: Service
    name: nextjs-sample
  port:
    targetPort: http
  wildcardPolicy: None
